--- a/templates/missing_information.html
+++ b/templates/missing_information.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <form action="" method="post">
-        {% if full_name %}
-        <p>Hello, {{full_name}}!</p>
-        {% endif %}
-
+        <p>Input your name,login or password</p>
 	</p>
 
     </form>
