--- a/templates/existed_porfile.html
+++ b/templates/existed_porfile.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <form action="" method="post">
-        {% if full_name %}
-        <p>Hello, {{full_name}}!</p>
-        {% endif %}
-
+        <p>Such user has already been registered</p>
 	</p>
 
     </form>
